logic errors fixed